# libsql

./: .gitignore  CLAUDE.md  Cargo.toml
.claude/: settings.json
.claude/skills/: battle-test.md  build-review-cycle.md  phase-audit.md
.github/workflows/: publish-server.yml  sync-upstream.yml
docs/superpowers/specs/: 2026-04-09-bolt-server-design.md  2026-04-09-bolt-server-plan.md  2026-04-09-libsql-graph-phase2-design.md
libsql-graph/: Cargo.toml  README.md
libsql-graph-bolt/: Cargo.toml
libsql-graph-bolt/src/: error.rs  lib.rs  server.rs  session.rs  transport.rs  types.rs
libsql-graph-bolt/src/packstream/: decode.rs  encode.rs  mod.rs  value.rs
libsql-graph-bolt/src/protocol/: handshake.rs  message.rs  mod.rs  state.rs
libsql-graph-bolt/tests/: test_bolt.py
libsql-graph/examples/: demo.py  e2e_demo.rs
libsql-graph/src/: batch.rs  cursor.rs  dump.rs  error.rs  graph.rs  integrity.rs  lib.rs
libsql-graph/src/cypher/: ast.rs  cost.rs  executor.rs  explain.rs  lexer.rs  mod.rs  optimizer.rs  parser.rs  planner.rs
libsql-graph/src/storage/: database.rs  dense.rs  freespace.rs  header.rs  label_index.rs  mem_pager.rs  mod.rs  node_store.rs  page.rs  pager.rs  pager_bridge.rs  property_store.rs  record.rs  rel_store.rs  stats.rs  string_overflow.rs  token_store.rs  wal.rs
libsql-graph/tests/: battle.rs  integration.rs
tasks/: 001-crate-scaffold-pager-ffi.md  002-page-types-header.md  003-node-store.md  004-relationship-store.md  005-token-store.md  006-freespace-manager.md  007-property-store.md  008-graph-api.md  AGENT_LOOP_PROMPT.md  STATUS.md
(+10 files in other folders)
