[package]
name = "libsql-graph-bolt"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "sync", "time"] }
bytes = "1"
libsql-graph = { path = "../libsql-graph" }

[[bin]]
name = "bolt-server"
path = "src/bin/bolt_server.rs"

[dev-dependencies]
